manifests/backend/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-fullstack
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-fullstack
        image: fullstack-backend:test
        imagePullPolicy: Never
        ports:
          - containerPort: 3001
