manifests/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  type: ClusterIP

  ports:
  - name: backend-port
    protocol: TCP
    port: 80   #port number of a Service (na tom portu je ovaj Service dostupan)
    targetPort: 3001
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.


# za test servisa mozemo unutar clustera (isti namespace) dignuti busybox (kontejner u novom pod-u) -> jednostavan kontejer
# koji ima curl naredbu i zato sto smo u istoj kubernetes mrezi, mozemo slati requestove preko terminala
# kubectl run curl --image=radial/busyboxplus:curl -i --t
